www-hochzeit/012-www-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: www
  labels:
    app: www
  namespace: www-hochzeit
spec:
  ports:
    - name: www
      port: 80
      protocol: TCP
  selector:
    app: www
