www-hochzeit/013-www-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: www
  name: www
  namespace: www-hochzeit
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: secrets
spec:
  rules:
  - host: hochzeit.mazdermind.de
    http:
      paths:
      - backend:
          serviceName: www
          servicePort: www
